+ minor changes to the gulp build

--- a/house-landing-page/src/html/header.html
+++ b/house-landing-page/src/html/header.html
@@ -1,3 +1,5 @@
 <header>
-
+  <p class="test">
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia doloribus iure reiciendis illum autem fuga dolor a assumenda tenetur, beatae quisquam, voluptas suscipit voluptates excepturi aliquam in enim esse nemo.
+  </p>
 </header>
