--- a/house-landing-page/src/html/header.html
+++ b/house-landing-page/src/html/header.html
@@ -1,5 +1,17 @@
-<header>
-  <p class="test">
-    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia doloribus iure reiciendis illum autem fuga dolor a assumenda tenetur, beatae quisquam, voluptas suscipit voluptates excepturi aliquam in enim esse nemo.
-  </p>
+<header class="header">
+  <div class="container header__container">
+    <div class="header__left"></div>
+    <div class="header__right">
+      <nav class="header__navigation">
+        <ul class="list-reset nav__list">
+          <li class="nav__el"><a href="#" class="nav__link">Reproductions</a></li>
+          <li class="nav__el"><a href="#" class="nav__link">New additions</a></li>
+          <li class="nav__el"><a href="#" class="nav__link">About us</a></li>
+        </ul>
+      </nav>
+      <a href="#" class="cart">
+        
+      </a>
+    </div>
+  </div>
 </header>
