--- a/house-landing-page/src/index.html
+++ b/house-landing-page/src/index.html
@@ -6,6 +6,8 @@
 <body>
 @@include('html/header.html', {})
 <main>
+@@include('html/hero.html', {})
+@@include('html/gallery.html', {})
 </main>
 @@include('html/footer.html', {})
 <script src="js/app/min.js"></script>
