--- a/house-landing-page/src/index.html
+++ b/house-landing-page/src/index.html
@@ -8,6 +8,8 @@
 <main>
 @@include('html/hero.html', {})
 @@include('html/gallery.html', {})
+@@include('html/new.html', {})
+@@include('html/team.html', {})
 </main>
 @@include('html/footer.html', {})
 <script src="js/app/min.js"></script>
