--- a/house-landing-page/src/html/gallery.html
+++ b/house-landing-page/src/html/gallery.html
@@ -15,12 +15,96 @@
       </ul>
     </div>
     <div class="gallery__list grid">
-      <div class="gallery__item"></div>
-      <div class="gallery__item"></div>
-      <div class="gallery__item"></div>
-      <div class="gallery__item"></div>
-      <div class="gallery__item"></div>
-      <div class="gallery__item"></div>
+      <div class="gallery__item">
+        <picture>
+          <source srcset="../img/gallery_1_phone.jpg" media="(max-width: 480px)">
+          <source srcset="../img/gallery_1_small-tab.jpg" media="(max-width: 700px)">
+          <source srcset="../img/gallery_1_tab.jpg" media="(max-width: 768px)">
+          <img src="../img/gallery_1_pc.jpg" alt="" class="gallery__item__img">
+        </picture>
+        <div class="gallery__item__content">
+          <span class="gallery__item__author">Marcel Rousseau</span>
+          <h3 class="gallery__item__title">Cupid's hunt</h3>
+          <span class="gallery__item__descr">Canvas, oil (50x80)</span>
+          <span class="gallery__item__price">$160</span>
+          <button class="gallery__btn btn btn-reset btn--green">Add to cart</button>
+        </div>
+      </div>
+      <div class="gallery__item">
+        <picture>
+          <source srcset="../img/gallery_2_phone.jpg" media="(max-width: 480px)">
+          <source srcset="../img/gallery_2_small-tab.jpg" media="(max-width: 700px)">
+          <source srcset="../img/gallery_2_tab.jpg" media="(max-width: 768px)">
+          <img src="../img/gallery_2_pc.jpg" alt="" class="gallery__item__img">
+        </picture>
+        <div class="gallery__item__content">
+          <span class="gallery__item__author">Henri Celine</span>
+          <h3 class="gallery__item__title">Lady with a dog</h3>
+          <span class="gallery__item__descr">Acrylic, paper (50x80)</span>
+          <span class="gallery__item__price">$180</span>
+          <button class="gallery__btn btn btn-reset btn--green">Add to cart</button>
+        </div>
+      </div>
+      <div class="gallery__item">
+        <picture>
+          <source srcset="../img/gallery_3_phone.jpg" media="(max-width: 480px)">
+          <source srcset="../img/gallery_3_small-tab.jpg" media="(max-width: 700px)">
+          <source srcset="../img/gallery_3_tab.jpg" media="(max-width: 768px)">
+          <img src="../img/gallery_3_pc.jpg" alt="" class="gallery__item__img">
+        </picture>
+        <div class="gallery__item__content">
+          <span class="gallery__item__author">Francois Dupont</span>
+          <h3 class="gallery__item__title">Procedure</h3>
+          <span class="gallery__item__descr">Colour lithograph (40x60)</span>
+          <span class="gallery__item__price">$200</span>
+          <button class="gallery__btn btn btn-reset btn--green">Add to cart</button>
+        </div>
+      </div>
+      <div class="gallery__item">
+        <picture>
+          <source srcset="../img/gallery_4_phone.jpg" media="(max-width: 480px)">
+          <source srcset="../img/gallery_4_small-tab.jpg" media="(max-width: 700px)">
+          <source srcset="../img/gallery_4_tab.jpg" media="(max-width: 768px)">
+          <img src="../img/gallery_4_pc.jpg" alt="" class="gallery__item__img">
+        </picture>
+        <div class="gallery__item__content">
+          <span class="gallery__item__author">Louis Detouche</span>
+          <h3 class="gallery__item__title">Rose</h3>
+          <span class="gallery__item__descr">Acrylic, paper (50x80)</span>
+          <span class="gallery__item__price">$130</span>
+          <button class="gallery__btn btn btn-reset btn--green">Add to cart</button>
+        </div>
+      </div>
+      <div class="gallery__item">
+        <picture>
+          <source srcset="../img/gallery_5_phone.jpg" media="(max-width: 580px)">
+          <source srcset="../img/gallery_5_small-tab.jpg" media="(max-width: 700px)">
+          <source srcset="../img/gallery_5_tab.jpg" media="(max-width: 768px)">
+          <img src="../img/gallery_5_pc.jpg" alt="" class="gallery__item__img">
+        </picture>
+        <div class="gallery__item__content">
+          <span class="gallery__item__author">Francois Dupont</span>
+          <h3 class="gallery__item__title">Birds' meal</h3>
+          <span class="gallery__item__descr">Colour lithograph (40x60)</span>
+          <span class="gallery__item__price">$210</span>
+          <button class="gallery__btn btn btn-reset btn--green">Add to cart</button>
+        </div>
+      </div>
+      <div class="gallery__item">
+        <picture>
+          <source srcset="../img/gallery_6_phone.jpg" media="(max-width: 480px)">
+          <source srcset="../img/gallery_6_small-tab.jpg" media="(max-width: 700px)">
+          <source srcset="../img/gallery_6_tab.jpg" media="(max-width: 768px)">
+          <img src="../img/gallery_6_pc.jpg" alt="" class="gallery__item__img">
+        </picture>
+        <div class="gallery__item__content">
+          <span class="gallery__item__author">Pierre Morange</span>
+          <h3 class="gallery__item__title">Landscape with fish</h3>
+          <span class="gallery__item__descr">Colour lithograph (40x60)</span>
+          <span class="gallery__item__price">$210</span>
+          <button class="gallery__btn btn btn-reset btn--green">Add to cart</button>
+        </div>
+      </div>
     </div>
   </div>
 </section>
