+ responsive for tablet

--- a/house-landing-page/src/html/gallery.html
+++ b/house-landing-page/src/html/gallery.html
@@ -14,13 +14,13 @@
         </li>
       </ul>
     </div>
-    <div class="gallery__list grid">
-      <div class="gallery__item">
+    <ul class="gallery__list grid list-reset">
+      <li class="gallery__item">
         <picture>
           <source srcset="../img/gallery_1_phone.jpg" media="(max-width: 480px)">
           <source srcset="../img/gallery_1_small-tab.jpg" media="(max-width: 700px)">
           <source srcset="../img/gallery_1_tab.jpg" media="(max-width: 768px)">
-          <img src="../img/gallery_1_pc.jpg" alt="" class="gallery__item__img">
+          <img src="../img/gallery_1_pc.jpg" alt="A painting of an angel" class="gallery__item__img" loading="lazy">
         </picture>
         <div class="gallery__item__content">
           <span class="gallery__item__author">Marcel Rousseau</span>
@@ -29,13 +29,13 @@
           <span class="gallery__item__price">$160</span>
           <button class="gallery__btn btn btn-reset btn--green">Add to cart</button>
         </div>
-      </div>
-      <div class="gallery__item">
+      </li>
+      <li class="gallery__item">
         <picture>
           <source srcset="../img/gallery_2_phone.jpg" media="(max-width: 480px)">
           <source srcset="../img/gallery_2_small-tab.jpg" media="(max-width: 700px)">
           <source srcset="../img/gallery_2_tab.jpg" media="(max-width: 768px)">
-          <img src="../img/gallery_2_pc.jpg" alt="" class="gallery__item__img">
+          <img src="../img/gallery_2_pc.jpg" alt="A painting of a lady in a red coat" class="gallery__item__img" loading="lazy">
         </picture>
         <div class="gallery__item__content">
           <span class="gallery__item__author">Henri Celine</span>
@@ -44,13 +44,13 @@
           <span class="gallery__item__price">$180</span>
           <button class="gallery__btn btn btn-reset btn--green">Add to cart</button>
         </div>
-      </div>
-      <div class="gallery__item">
+      </li>
+      <li class="gallery__item">
         <picture>
           <source srcset="../img/gallery_3_phone.jpg" media="(max-width: 480px)">
           <source srcset="../img/gallery_3_small-tab.jpg" media="(max-width: 700px)">
           <source srcset="../img/gallery_3_tab.jpg" media="(max-width: 768px)">
-          <img src="../img/gallery_3_pc.jpg" alt="" class="gallery__item__img">
+          <img src="../img/gallery_3_pc.jpg" alt="A painting of a doctor performing procudere on patient's head" class="gallery__item__img" loading="lazy">
         </picture>
         <div class="gallery__item__content">
           <span class="gallery__item__author">Francois Dupont</span>
@@ -59,13 +59,13 @@
           <span class="gallery__item__price">$200</span>
           <button class="gallery__btn btn btn-reset btn--green">Add to cart</button>
         </div>
-      </div>
-      <div class="gallery__item">
+      </li>
+      <li class="gallery__item">
         <picture>
           <source srcset="../img/gallery_4_phone.jpg" media="(max-width: 480px)">
           <source srcset="../img/gallery_4_small-tab.jpg" media="(max-width: 700px)">
           <source srcset="../img/gallery_4_tab.jpg" media="(max-width: 768px)">
-          <img src="../img/gallery_4_pc.jpg" alt="" class="gallery__item__img">
+          <img src="../img/gallery_4_pc.jpg" alt="A painting of a lady in polka-dot dress sitting on a bench under a tree" class="gallery__item__img" loading="lazy">
         </picture>
         <div class="gallery__item__content">
           <span class="gallery__item__author">Louis Detouche</span>
@@ -74,13 +74,13 @@
           <span class="gallery__item__price">$130</span>
           <button class="gallery__btn btn btn-reset btn--green">Add to cart</button>
         </div>
-      </div>
-      <div class="gallery__item">
+      </li>
+      <li class="gallery__item">
         <picture>
-          <source srcset="../img/gallery_5_phone.jpg" media="(max-width: 580px)">
+          <source srcset="../img/gallery_5_phone.jpg" media="(max-width: 480px)">
           <source srcset="../img/gallery_5_small-tab.jpg" media="(max-width: 700px)">
           <source srcset="../img/gallery_5_tab.jpg" media="(max-width: 768px)">
-          <img src="../img/gallery_5_pc.jpg" alt="" class="gallery__item__img">
+          <img src="../img/gallery_5_pc.jpg" alt="A painting of two birds eating from a plate" class="gallery__item__img" loading="lazy">
         </picture>
         <div class="gallery__item__content">
           <span class="gallery__item__author">Francois Dupont</span>
@@ -89,13 +89,13 @@
           <span class="gallery__item__price">$210</span>
           <button class="gallery__btn btn btn-reset btn--green">Add to cart</button>
         </div>
-      </div>
-      <div class="gallery__item">
+      </li>
+      <li class="gallery__item">
         <picture>
           <source srcset="../img/gallery_6_phone.jpg" media="(max-width: 480px)">
           <source srcset="../img/gallery_6_small-tab.jpg" media="(max-width: 700px)">
           <source srcset="../img/gallery_6_tab.jpg" media="(max-width: 768px)">
-          <img src="../img/gallery_6_pc.jpg" alt="" class="gallery__item__img">
+          <img src="../img/gallery_6_pc.jpg" alt="An abstract painting of a beach" class="gallery__item__img" loading="lazy">
         </picture>
         <div class="gallery__item__content">
           <span class="gallery__item__author">Pierre Morange</span>
@@ -104,7 +104,7 @@
           <span class="gallery__item__price">$210</span>
           <button class="gallery__btn btn btn-reset btn--green">Add to cart</button>
         </div>
-      </div>
-    </div>
+      </li>
+    </ul>
   </div>
 </section>
