--- a/house-landing-page/src/html/hero.html
+++ b/house-landing-page/src/html/hero.html
@@ -1,4 +1,4 @@
-<section class="hero">
+<section class="hero" id="hero">
   <div class="container grid">
     <picture class="hero__img">
       <source srcset="img/hero-img-small.png" media="(max-width: 700px)">
