--- a/house-landing-page/src/index.html
+++ b/house-landing-page/src/index.html
@@ -12,6 +12,6 @@
 @@include('html/team.html', {})
 </main>
 @@include('html/footer.html', {})
-<script src="js/app/min.js"></script>
+<script src="js/app.min.js"></script>
 </body>
 </html>
