--- a/house-landing-page/src/html/footer.html
+++ b/house-landing-page/src/html/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <div class="container grid">
+  <div class="container footer__container grid">
     <div class="footer__left">
       <a href="#" class="footer__logo">
         <img src="../img/svgicons/logo.svg" alt="Ink. Home logo">
