--- a/house-landing-page/src/html/gallery.html
+++ b/house-landing-page/src/html/gallery.html
@@ -10,7 +10,7 @@
           <button class="btn-reset gallery-tabs__btn">Germany</button>
         </li>
         <li class="gallery-tabs__item">
-          <button class="btn-reset gallery-tabs__btn">the UK</button>
+          <button class="btn-reset gallery-tabs__btn">England</button>
         </li>
       </ul>
     </div>
