--- a/house-landing-page/src/html/hero.html
+++ b/house-landing-page/src/html/hero.html
@@ -11,7 +11,7 @@
       <p class="hero__text">
         High quality renderings on heavy paper or linen canvas. Rare works, affordable prices.
       </p>
-      <a href="#" class="btn btn--green">
+      <a href="#" class="btn btn--green hero__btn">
         Products
       </a>
     </div>
