--- a/house-landing-page/src/html/new.html
+++ b/house-landing-page/src/html/new.html
@@ -9,6 +9,6 @@
         Taking success rates into account, the frontier of human resource training predicts a high demand for progressive development areas.
       </p>
     </div>
-    <a href="#" class="btn btn-reset btn--yellow">Learn more</a>
+    <a href="#" class="btn btn-reset btn--yellow new__btn">Learn more</a>
   </div>
 </section>
