--- a/house-landing-page/src/html/gallery.html
+++ b/house-landing-page/src/html/gallery.html
@@ -206,90 +206,90 @@
       <ul class="gallery__list grid list-reset">
           <li class="gallery__item">
             <picture>
-              <source srcset="../img/gallery_2-1_phone.jpg" media="(max-width: 480px)">
-              <source srcset="../img/gallery_2-1_small-tab.jpg" media="(max-width: 700px)">
-              <source srcset="../img/gallery_2-1_tab.jpg" media="(max-width: 768px)">
-              <img src="../img/gallery_2-1_pc.jpg" alt="A painting of a lady in a green coat" class="gallery__item__img" loading="lazy">
+              <source srcset="../img/gallery_3-1_phone.jpg" media="(max-width: 480px)">
+              <source srcset="../img/gallery_3-1_small-tab.jpg" media="(max-width: 700px)">
+              <source srcset="../img/gallery_3-1_tab.jpg" media="(max-width: 768px)">
+              <img src="../img/gallery_3-1_pc.jpg" alt="A painting of a moose" class="gallery__item__img" loading="lazy">
             </picture>
             <div class="gallery__item__content">
-              <span class="gallery__item__author">Kurt Werner</span>
-              <h3 class="gallery__item__title">Above the city</h3>
-              <span class="gallery__item__descr">Colour lithograph (40x60) </span>
-              <span class="gallery__item__price">$170</span>
-              <button class="gallery__btn btn btn-reset btn--green">Add to cart</button>
-            </div>
-          </li>
-          <li class="gallery__item">
-            <picture>
-              <source srcset="../img/gallery_2-2_phone.jpg" media="(max-width: 480px)">
-              <source srcset="../img/gallery_2-2_small-tab.jpg" media="(max-width: 700px)">
-              <source srcset="../img/gallery_2-2_tab.jpg" media="(max-width: 768px)">
-              <img src="../img/gallery_2-2_pc.jpg" alt="A painting of chicks" class="gallery__item__img" loading="lazy">
-            </picture>
-            <div class="gallery__item__content">
-              <span class="gallery__item__author">Max Richter</span>
-              <h3 class="gallery__item__title">The chicks</h3>
-              <span class="gallery__item__descr">Canvas, oil (50x80) </span>
-              <span class="gallery__item__price">$180</span>
-              <button class="gallery__btn btn btn-reset btn--green">Add to cart</button>
-            </div>
-          </li>
-          <li class="gallery__item">
-            <picture>
-              <source srcset="../img/gallery_2-3_phone.jpg" media="(max-width: 480px)">
-              <source srcset="../img/gallery_2-3_small-tab.jpg" media="(max-width: 700px)">
-              <source srcset="../img/gallery_2-3_tab.jpg" media="(max-width: 768px)">
-              <img src="../img/gallery_2-3_pc.jpg" alt="A painting of a huge bird with black feathers" class="gallery__item__img" loading="lazy">
-            </picture>
-            <div class="gallery__item__content">
-              <span class="gallery__item__author">Martin Mayer</span>
-              <h3 class="gallery__item__title">Among the leaves</h3>
-              <span class="gallery__item__descr">Colour lithograph (40x60)</span>
-              <span class="gallery__item__price">$200</span>
-              <button class="gallery__btn btn btn-reset btn--green">Add to cart</button>
-            </div>
-          </li>
-          <li class="gallery__item">
-            <picture>
-              <source srcset="../img/gallery_2-4_phone.jpg" media="(max-width: 480px)">
-              <source srcset="../img/gallery_2-4_small-tab.jpg" media="(max-width: 700px)">
-              <source srcset="../img/gallery_2-4_tab.jpg" media="(max-width: 768px)">
-              <img src="../img/gallery_2-4_pc.jpg" alt="A painting of a colourful bird sitting on a branch" class="gallery__item__img" loading="lazy">
-            </picture>
-            <div class="gallery__item__content">
-              <span class="gallery__item__author">Hermann Becker</span>
-              <h3 class="gallery__item__title">Bright bird</h3>
-              <span class="gallery__item__descr">Colour lithograph (40x60)</span>
-              <span class="gallery__item__price">$130</span>
-              <button class="gallery__btn btn btn-reset btn--green">Add to cart</button>
-            </div>
-          </li>
-          <li class="gallery__item">
-            <picture>
-              <source srcset="../img/gallery_2-5_phone.jpg" media="(max-width: 480px)">
-              <source srcset="../img/gallery_2-5_small-tab.jpg" media="(max-width: 700px)">
-              <source srcset="../img/gallery_2-5_tab.jpg" media="(max-width: 768px)">
-              <img src="../img/gallery_2-5_pc.jpg" alt="A painting of two woodpeckers sitting on a tree" class="gallery__item__img" loading="lazy">
-            </picture>
-            <div class="gallery__item__content">
-              <span class="gallery__item__author">Wolf Bauer</span>
-              <h3 class="gallery__item__title">Woodpeckers</h3>
-              <span class="gallery__item__descr">Paper, acrylic (50x80) </span>
+              <span class="gallery__item__author">Paul Smith</span>
+              <h3 class="gallery__item__title">Wild beast</h3>
+              <span class="gallery__item__descr">Watercolour, paper (50x80) </span>
               <span class="gallery__item__price">$210</span>
               <button class="gallery__btn btn btn-reset btn--green">Add to cart</button>
             </div>
           </li>
           <li class="gallery__item">
             <picture>
-              <source srcset="../img/gallery_2-6_phone.jpg" media="(max-width: 480px)">
-              <source srcset="../img/gallery_2-6_small-tab.jpg" media="(max-width: 700px)">
-              <source srcset="../img/gallery_2-6_tab.jpg" media="(max-width: 768px)">
-              <img src="../img/gallery_2-6_pc.jpg" alt="An abstract painting of a beach town" class="gallery__item__img" loading="lazy">
+              <source srcset="../img/gallery_3-2_phone.jpg" media="(max-width: 480px)">
+              <source srcset="../img/gallery_3-2_small-tab.jpg" media="(max-width: 700px)">
+              <source srcset="../img/gallery_3-2_tab.jpg" media="(max-width: 768px)">
+              <img src="../img/gallery_3-2_pc.jpg" alt="A painting of a rocky shore" class="gallery__item__img" loading="lazy">
             </picture>
             <div class="gallery__item__content">
-              <span class="gallery__item__author">Walter Hartmann</span>
-              <h3 class="gallery__item__title">Big Waters</h3>
-              <span class="gallery__item__descr">Paper, acrylic (50x80) </span>
+              <span class="gallery__item__author">John White</span>
+              <h3 class="gallery__item__title">Rocky shore</h3>
+              <span class="gallery__item__descr">Colour lithograph (40x60) </span>
+              <span class="gallery__item__price">$200</span>
+              <button class="gallery__btn btn btn-reset btn--green">Add to cart</button>
+            </div>
+          </li>
+          <li class="gallery__item">
+            <picture>
+              <source srcset="../img/gallery_3-3_phone.jpg" media="(max-width: 480px)">
+              <source srcset="../img/gallery_3-3_small-tab.jpg" media="(max-width: 700px)">
+              <source srcset="../img/gallery_3-3_tab.jpg" media="(max-width: 768px)">
+              <img src="../img/gallery_3-3_pc.jpg" alt="A painting of a river flowing between two slopes" class="gallery__item__img" loading="lazy">
+            </picture>
+            <div class="gallery__item__content">
+              <span class="gallery__item__author">Jim Watson</span>
+              <h3 class="gallery__item__title">River and mountains</h3>
+              <span class="gallery__item__descr">Watercolour, paper (50x80)</span>
+              <span class="gallery__item__price">$200</span>
+              <button class="gallery__btn btn btn-reset btn--green">Add to cart</button>
+            </div>
+          </li>
+          <li class="gallery__item">
+            <picture>
+              <source srcset="../img/gallery_3-4_phone.jpg" media="(max-width: 480px)">
+              <source srcset="../img/gallery_3-4_small-tab.jpg" media="(max-width: 700px)">
+              <source srcset="../img/gallery_3-4_tab.jpg" media="(max-width: 768px)">
+              <img src="../img/gallery_3-4_pc.jpg" alt="A painting of a white parrot" class="gallery__item__img" loading="lazy">
+            </picture>
+            <div class="gallery__item__content">
+              <span class="gallery__item__author">Eugene Zillion</span>
+              <h3 class="gallery__item__title">A white parrot</h3>
+              <span class="gallery__item__descr">Colour lithograph (40x60)</span>
+              <span class="gallery__item__price">$140</span>
+              <button class="gallery__btn btn btn-reset btn--green">Add to cart</button>
+            </div>
+          </li>
+          <li class="gallery__item">
+            <picture>
+              <source srcset="../img/gallery_3-5_phone.jpg" media="(max-width: 480px)">
+              <source srcset="../img/gallery_3-5_small-tab.jpg" media="(max-width: 700px)">
+              <source srcset="../img/gallery_3-5_tab.jpg" media="(max-width: 768px)">
+              <img src="../img/gallery_3-5_pc.jpg" alt="A painting of a brightly-coloured fish" class="gallery__item__img" loading="lazy">
+            </picture>
+            <div class="gallery__item__content">
+              <span class="gallery__item__author">Eric Gillman</span>
+              <h3 class="gallery__item__title">Night fish</h3>
+              <span class="gallery__item__descr">Paper, acrylic (50x80)</span>
+              <span class="gallery__item__price">$120</span>
+              <button class="gallery__btn btn btn-reset btn--green">Add to cart</button>
+            </div>
+          </li>
+          <li class="gallery__item">
+            <picture>
+              <source srcset="../img/gallery_3-6_phone.jpg" media="(max-width: 480px)">
+              <source srcset="../img/gallery_3-6_small-tab.jpg" media="(max-width: 700px)">
+              <source srcset="../img/gallery_3-6_tab.jpg" media="(max-width: 768px)">
+              <img src="../img/gallery_3-6_pc.jpg" alt="A painting of a big ginger cat" class="gallery__item__img" loading="lazy">
+            </picture>
+            <div class="gallery__item__content">
+              <span class="gallery__item__author">Alfred Barr</span>
+              <h3 class="gallery__item__title">Ginger cat</h3>
+              <span class="gallery__item__descr">Colour lithograph (40x60)</span>
               <span class="gallery__item__price">$210</span>
               <button class="gallery__btn btn btn-reset btn--green">Add to cart</button>
             </div>
